# c-lang

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  check.yml
src/: ast.rs  backend.rs  c-lang  c-lang.c  main.rs  tokenizer.rs  utils.rs
src-c/: main.c
