[package]
name = "c-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.40", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
inkwell = { version =  "0.6.0", features = ["llvm18-1"] }
llvm-sys = "201.0.1"
paste = "1.0.15"
unescaper = "0.1.6"
